--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,3 +25,77 @@ nav span {
   padding: 20px 10px;
 
 }
+
+.column.large {
+  width: 630px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin-right: 32px;
+  position: relative;
+  top: 100px;
+  margin: 15px;
+}
+
+
+.lead-story {
+  border: 1px solid black;
+}
+
+.text-content {
+  border: 1px solid black;
+}
+
+.column.medium {
+  width: 300px;
+  display: flex;
+  position: relative;
+  top: 100px;
+  flex-direction: column;
+  border: 1px solid black;
+  margin: 15px;
+}
+
+.column.small {
+  width: 240px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 100px;
+  border: 1px solid black;
+  margin: 15px;
+}
+
+.news-bites {
+  border: 1px solid black;
+}
+
+.content {
+  display: flex;
+}
+
+.image-content  span {
+  display: flex;
+  background-image: url("../images/img-story-main.png");
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+.fall-cancelled image-content {
+  background-image: url("../images/img-story-2.png");
+
+}
+
+.cat-ceo image-content {
+  background-image: url("../images/img-story-1.png");
+
+}
+
+.narrative {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
