--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,10 @@ header {
   width: 100%;
   height: 80px;
   border-bottom: 1px solid black;
+  background-color: white;
+  margin-top: 0px;
+
+
 
 }
 
@@ -26,6 +30,10 @@ nav span {
 
 }
 
+.content {
+  display: flex;
+}
+
 .column.large {
   width: 630px;
   height: 550px;
@@ -39,8 +47,10 @@ nav span {
 }
 
 
-.lead-story {
+.lead-story .image-content {
   border: 1px solid black;
+  margin-top: 0;
+  text-align: left;
 }
 
 .text-content {
@@ -71,12 +81,10 @@ nav span {
   border: 1px solid black;
 }
 
-.content {
+.image-content {
   display: flex;
-}
-
-.image-content  span {
-  display: flex;
+  height: 300px;
+  text-align: center;
   background-image: url("../images/img-story-main.png");
   font-family: Georgia;
   font-weight: bold;
@@ -84,12 +92,13 @@ nav span {
   color: white;
 }
 
-.fall-cancelled image-content {
+.fall-cancelled {
   background-image: url("../images/img-story-2.png");
+  text-align: center;
 
 }
 
-.cat-ceo image-content {
+.cat-ceo {
   background-image: url("../images/img-story-1.png");
 
 }
@@ -98,4 +107,8 @@ nav span {
   font-family: Georgia;
   font-size: 17px;
   color: black;
+}
+
+.pop-culture {
+  background-image: url("../images/img-story-3.png");
 }
